--- a/css/clean-blog.css
+++ b/css/clean-blog.css
@@ -8,6 +8,8 @@ body {
   font-size: 20px;
   color: #212529;
   font-family: 'Lora', 'Times New Roman', serif;
+	background-repeat:no-repeat;
+	background-position: center center;
 }
 
 p {
@@ -60,6 +62,8 @@ blockquote {
   border-bottom-right-radius: 5px;
   border-bottom-left-radius: 5px;
 }
+
+
 
 ::-moz-selection {
   color: #fff;
